--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="./jumpingGame.css" />
   </head>
   <body>
-    <h1>MAIN Assignment II (Create a Simple Jumping Game):</h1>
+    <header id="header">
+      <h1>MAIN Assignment II (Create a Simple Jumping Game):</h1>
+    </header>
+    <main>
+      <canvas id="canvas" width="1280" height="720"></canvas>
+    </main>
+    <footer id="footer">&copy;2024</footer>
     <script src="./jumpingGame.js"></script>
   </body>
 </html>
