first variant of the game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <h1>Simple Jumping Game.</h1>
       <ul>
         <li>To start game press "Enter" key</li>
-        <li>To make a pause press "Escape" key</li>
         <li>To make a jump press "Space" key</li>
       </ul>
     </header>
@@ -23,5 +22,6 @@
     </main>
     <footer id="footer">&copy;2024</footer>
     <script src="./jumpingGame.js"></script>
+    <!-- <script src="./test.js"></script> -->
   </body>
 </html>
