--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header id="header">
       <h1>Simple Jumping Game.</h1>
       <ul>
-        <li>To start game press "Enter" key</li>
+        <li>To start a game press "Enter" key</li>
         <li>To make a jump press "Space" key</li>
       </ul>
     </header>
